--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-testando o site do 1º ano A 
+<header>ALURAFLIX</header>
 
 
-Este site é maneiro e radical 
-
-Compartilhe !! 
+<h1>ATRAVES DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
+#homem - aranha 
